Bindings/C/Include/OVR_CAPI.h

typedef char ovrBool;
//-----------------------------------------------------------------------------------
// ***** HMD Types

// Enumerates all HMD types that we support.
typedef enum
{
    ovrHmd_None             = 0,    
    ovrHmd_DK1              = 3,
    ovrHmd_DKHD             = 4,
    ovrHmd_CrystalCoveProto = 5,
    ovrHmd_DK2              = 6,
    ovrHmd_Other             // Some HMD other then the one in the enumeration.
} ovrHmdType;
// HMD capability bits reported by device.
typedef enum
{
    ovrHmdCap_Present           = 0x0001,   //  This HMD exists (as opposed to being unplugged).
    ovrHmdCap_Available         = 0x0002,   //  HMD and is sensor is available for use
                                            //  (if not owned by another app).    
    ovrHmdCap_Orientation       = 0x0010,   //  Support orientation tracking (IMU).
    ovrHmdCap_YawCorrection     = 0x0020,   //  Supports yaw correction through magnetometer or other means.
    ovrHmdCap_Position          = 0x0040,   //  Supports positional tracking.
    ovrHmdCap_LowPersistence    = 0x0080,   //  Supports low persistence mode.
    ovrHmdCap_LatencyTest       = 0x0100,   //  Supports pixel reading for continous latency testing.
    ovrHmdCap_DynamicPrediction = 0x0200,   //  Adjust prediction dynamically based on DK2 Latency.

    // Support rendering without VSync for debugging
    ovrHmdCap_NoVSync           = 0x1000
} ovrHmdCapBits;
// Describes distortion rendering parameters for ovrHmd_ConfigureRenderAPI or for
// ovrHmd_GenerateDistortionMesh.
typedef enum
{        
    ovrDistortion_Chromatic = 0x01,
    ovrDistortion_TimeWarp    = 0x02,
    ovrDistortion_Vignette  = 0x08
} ovrDistortionCaps;
// Specifies which eye is being used for rendering.
// This type explicitly does not include a third "NoStereo" option, as such is
// not required for an HMD-centered API.
typedef enum
{
    ovrEye_Left  = 0,
    ovrEye_Right = 1,
    ovrEye_Count = 2
} ovrEyeType;
// Handle to HMD; returned by ovrHmd_Create.
typedef struct ovrHmdStruct* ovrHmd;
// Describes the type of positional tracking being done.
/*
typedef enum
{
    ovrPose_None,
    ovrPose_HeadModel,
    ovrPose_Positional
} ovrPoseType;
*/


// Bit flags describing the current status of sensor tracking.
typedef enum
{
    ovrStatus_OrientationTracked    = 0x0001,   // Orientation is currently tracked (connected and in use).
    ovrStatus_PositionTracked       = 0x0002,   // Position is currently tracked (FALSE if out of range).
    ovrStatus_PositionConnected     = 0x0020,   // Position tracking HW is connected.
    ovrStatus_HmdConnected          = 0x0080    // HMD Display is available & connected.
} ovrStatusBits;
//-----------------------------------------------------------------------------------
// ***** Platform-independent Rendering Configuration

// These types are used to hide platform-specific details when passing
// render device, OS and texture data to the APIs.
//
// The benefit of having these wrappers vs. platform-specific API functions is
// that they allow game glue code to be portable. A typical example is an
// engine that has multiple back ends, say GL and D3D. Portable code that calls
// these back ends may also use LibOVR. To do this, back ends can be modified
// to return portable types such as ovrTexture and ovrRenderAPIConfig.

typedef enum
{
    ovrRenderAPI_None,
    ovrRenderAPI_OpenGL,
    ovrRenderAPI_Android_GLES,  // May include extra native window pointers, etc.
    ovrRenderAPI_D3D9,
    ovrRenderAPI_D3D10,
    ovrRenderAPI_D3D11,
    ovrRenderAPI_Count
} ovrRenderAPIType;
// Library init/shutdown, must be called around all other OVR code.
// No other functions calls are allowed before ovr_Initialize succeeds or after ovr_Shutdown.
OVR_EXPORT ovrBool  ovr_Initialize();
OVR_EXPORT void     ovr_Shutdown();
// Detects or re-detects HMDs and reports the total number detected.
// Users can get information about each HMD by calling ovrHmd_Create with an index.
OVR_EXPORT int      ovrHmd_Detect();
// Creates a handle to an HMD and optionally fills in data about it.
// Index can [0 .. ovrHmd_Detect()-1]; index mappings can cange after each ovrHmd_Detect call.
// If not null, returned handle must be freed with ovrHmd_Destroy.
OVR_EXPORT ovrHmd   ovrHmd_Create(int index);
OVR_EXPORT void     ovrHmd_Destroy(ovrHmd hmd);
// Creates a "fake" HMD used for debugging only. This is not tied to specific hardware,
// but may be used to debug some of the related rendering.
OVR_EXPORT ovrHmd   ovrHmd_CreateDebug(ovrHmdType type);
// Returns last error for HMD state. Returns null for no error.
// String is valid until next call or GetLastError or HMD is destroyed.
// Pass null hmd to get global error (for create, etc).
OVR_EXPORT const char* ovrHmd_GetLastError(ovrHmd hmd);
//-------------------------------------------------------------------------------------
// ***** Sensor Interface

// All sensor interface functions are thread-safe, allowing sensor state to be sampled
// from different threads.

// Starts sensor sampling, enabling specified capabilities, described by ovrHmdCapBits.
//  - supportedCaps specifies support that is requested. The function will succeed even if,
//    if these caps are not available (i.e. sensor or camera is unplugged). Support will
//    automatically be enabled if such device is plugged in later. Software should check
//    ovrSensorState.StatusFlags for real-time status.
// - requiredCaps specify sensor capabilities required at the time of the call. If they
//   are not available, the function will fail. Pass 0 if only specifying SupportedCaps.
OVR_EXPORT ovrBool  ovrHmd_StartSensor(ovrHmd hmd, unsigned int supportedCaps,
                                       unsigned int requiredCaps);
// Stops sensor sampling, shutting down internal resources.
OVR_EXPORT void     ovrHmd_StopSensor(ovrHmd hmd);
    #define OVR_KEY_USER                        "User"
    #define OVR_KEY_NAME                        "Name"
    #define OVR_KEY_GENDER                      "Gender"
    #define OVR_KEY_PLAYER_HEIGHT               "PlayerHeight"
    #define OVR_KEY_EYE_HEIGHT                  "EyeHeight"
    #define OVR_KEY_IPD                         "IPD"
    #define OVR_KEY_NECK_TO_EYE_HORIZONTAL      "NeckEyeHori"
    #define OVR_KEY_NECK_TO_EYE_VERTICAL        "NeckEyeVert"
    #define OVR_DEFAULT_GENDER                  "Male"
    #define OVR_DEFAULT_PLAYER_HEIGHT           1.778f
    #define OVR_DEFAULT_EYE_HEIGHT              1.675f
    #define OVR_DEFAULT_IPD                     0.064f
    #define OVR_DEFAULT_NECK_TO_EYE_HORIZONTAL  0.12f
    #define OVR_DEFAULT_NECK_TO_EYE_VERTICAL    0.12f