Bindings/Java/src/main/java/com/oculusvr/api/OvrLibrary.java


import com.sun.jna.Library;
import com.sun.jna.Native;
import com.sun.jna.NativeLibrary;
import com.sun.jna.Pointer;
import com.sun.jna.PointerType;
import com.sun.jna.ptr.FloatByReference;
/**
 * JNA Wrapper for library <b>OVR_CAPI</b><br>
 * This file was autogenerated by <a href="http://jnaerator.googlecode.com/">JNAerator</a>,<br>
 * a tool written by <a href="http://ochafik.com/">Olivier Chafik</a> that <a href="http://code.google.com/p/jnaerator/wiki/CreditsAndLicense">uses a few opensource projects.</a>.<br>
 * For help, please visit <a href="http://nativelibs4java.googlecode.com/">NativeLibs4Java</a> , <a href="http://rococoa.dev.java.net/">Rococoa</a>, or <a href="http://jna.dev.java.net/">JNA</a>.
 */
public interface OvrLibrary extends Library {
  public static final String JNA_LIBRARY_NAME = "OVR_C";
  public static final NativeLibrary JNA_NATIVE_LIB = NativeLibrary.getInstance(OvrLibrary.JNA_LIBRARY_NAME);
  public static final OvrLibrary INSTANCE = (OvrLibrary)Native.loadLibrary(OvrLibrary.JNA_LIBRARY_NAME, OvrLibrary.class);
  /**
   * <i>native declaration : OVR_CAPI.h</i><br>
   * enum values
   */
  public static interface ovrHmdType {
    /** <i>native declaration : OVR_CAPI.h:86</i> */
    public static final int ovrHmd_None = 0;
    /** <i>native declaration : OVR_CAPI.h:87</i> */
    public static final int ovrHmd_DK1 = 3;
    /** <i>native declaration : OVR_CAPI.h:88</i> */
    public static final int ovrHmd_DKHD = 4;
    /** <i>native declaration : OVR_CAPI.h:89</i> */
    public static final int ovrHmd_CrystalCoveProto = 5;
    /** <i>native declaration : OVR_CAPI.h:90</i> */
    public static final int ovrHmd_DK2 = 6;
    /**
     * Some HMD other then the one in the enumeration.<br>
     * <i>native declaration : OVR_CAPI.h:91</i>
     */
    public static final int ovrHmd_Other = 7;
  };
  /**
   * <i>native declaration : OVR_CAPI.h</i><br>
   * enum values
   */
  public static interface ovrHmdCapBits {
    /**
     * This HMD exists (as opposed to being unplugged).<br>
     * <i>native declaration : OVR_CAPI.h:97</i>
     */
    public static final int ovrHmdCap_Present = 0x0001;
    /**
     * HMD and is sensor is available for use<br>
     * <i>native declaration : OVR_CAPI.h:98</i>
     */
    public static final int ovrHmdCap_Available = 0x0002;
    /**
     * (if not owned by another app).<br>
     * Support orientation tracking (IMU).<br>
     * <i>native declaration : OVR_CAPI.h:100</i>
     */
    public static final int ovrHmdCap_Orientation = 0x0010;
    /**
     * Supports yaw correction through magnetometer or other means.<br>
     * <i>native declaration : OVR_CAPI.h:101</i>
     */
    public static final int ovrHmdCap_YawCorrection = 0x0020;
    /**
     * Supports positional tracking.<br>
     * <i>native declaration : OVR_CAPI.h:102</i>
     */
    public static final int ovrHmdCap_Position = 0x0040;
    /**
     * Supports low persistence mode.<br>
     * <i>native declaration : OVR_CAPI.h:103</i>
     */
    public static final int ovrHmdCap_LowPersistence = 0x0080;
    /**
     * Supports pixel reading for continous latency testing.<br>
     * <i>native declaration : OVR_CAPI.h:104</i>
     */
    public static final int ovrHmdCap_LatencyTest = 0x0100;
    /**
     * Adjust prediction dynamically based on DK2 Latency.<br>
     * <i>native declaration : OVR_CAPI.h:105</i>
     */
    public static final int ovrHmdCap_DynamicPrediction = 0x0200;
    /**
     * Support rendering without VSync for debugging<br>
     * <i>native declaration : OVR_CAPI.h:108</i>
     */
    public static final int ovrHmdCap_NoVSync = 0x1000;
  };
  /**
   * <i>native declaration : OVR_CAPI.h</i><br>
   * enum values
   */
  public static interface ovrDistortionCaps {
    /** <i>native declaration : OVR_CAPI.h:115</i> */
    public static final int ovrDistortion_Chromatic = 0x01;
    /** <i>native declaration : OVR_CAPI.h:116</i> */
    public static final int ovrDistortion_TimeWarp = 0x02;
    /** <i>native declaration : OVR_CAPI.h:117</i> */
    public static final int ovrDistortion_Vignette = 0x08;
  };
  /**
   * <i>native declaration : OVR_CAPI.h</i><br>
   * enum values
   */
  public static interface ovrEyeType {
    /** <i>native declaration : OVR_CAPI.h:126</i> */
    public static final int ovrEye_Left = 0;
    /** <i>native declaration : OVR_CAPI.h:127</i> */
    public static final int ovrEye_Right = 1;
    /** <i>native declaration : OVR_CAPI.h:128</i> */
    public static final int ovrEye_Count = 2;
  };
  /**
   * <i>native declaration : OVR_CAPI.h</i><br>
   * enum values
   */
  public static interface ovrStatusBits {
    /**
     * Orientation is currently tracked (connected and in use).<br>
     * <i>native declaration : OVR_CAPI.h:188</i>
     */
    public static final int ovrStatus_OrientationTracked = 0x0001;
    /**
     * Position is currently tracked (FALSE if out of range).<br>
     * <i>native declaration : OVR_CAPI.h:189</i>
     */
    public static final int ovrStatus_PositionTracked = 0x0002;
    /**
     * Position tracking HW is connected.<br>
     * <i>native declaration : OVR_CAPI.h:190</i>
     */
    public static final int ovrStatus_PositionConnected = 0x0020;
    /**
     * HMD Display is available & connected.<br>
     * <i>native declaration : OVR_CAPI.h:191</i>
     */
    public static final int ovrStatus_HmdConnected = 0x0080;
  };
  /**
   * <i>native declaration : OVR_CAPI.h</i><br>
   * enum values
   */
  public static interface ovrRenderAPIType {
    /** <i>native declaration : OVR_CAPI.h:298</i> */
    public static final int ovrRenderAPI_None = 0;
    /** <i>native declaration : OVR_CAPI.h:299</i> */
    public static final int ovrRenderAPI_OpenGL = 1;
    /** <i>native declaration : OVR_CAPI.h:300</i> */
    public static final int ovrRenderAPI_Android_GLES = 2;
    /** <i>native declaration : OVR_CAPI.h:301</i> */
    public static final int ovrRenderAPI_D3D9 = 3;
    /** <i>native declaration : OVR_CAPI.h:302</i> */
    public static final int ovrRenderAPI_D3D10 = 4;
    /** <i>native declaration : OVR_CAPI.h:303</i> */
    public static final int ovrRenderAPI_D3D11 = 5;
    /** <i>native declaration : OVR_CAPI.h:304</i> */
    public static final int ovrRenderAPI_Count = 6;
  };
  /** <i>native declaration : OVR_CAPI.h</i> */
  public static final float OVR_DEFAULT_IPD = 0.064f;
  /** <i>native declaration : OVR_CAPI.h</i> */
  public static final String OVR_DEFAULT_GENDER = "Male";
  /** <i>native declaration : OVR_CAPI.h</i> */
  public static final String OVR_KEY_NECK_TO_EYE_HORIZONTAL = "NeckEyeHori";
  /** <i>native declaration : OVR_CAPI.h</i> */
  public static final float OVR_DEFAULT_EYE_HEIGHT = 1.675f;
  /** <i>native declaration : OVR_CAPI.h</i> */
  public static final String OVR_KEY_USER = "User";
  /** <i>native declaration : OVR_CAPI.h</i> */
  public static final float OVR_DEFAULT_PLAYER_HEIGHT = 1.778f;
  /** <i>native declaration : OVR_CAPI.h</i> */
  public static final String OVR_KEY_PLAYER_HEIGHT = "PlayerHeight";
  /** <i>native declaration : OVR_CAPI.h</i> */
  public static final String OVR_KEY_NECK_TO_EYE_VERTICAL = "NeckEyeVert";
  /** <i>native declaration : OVR_CAPI.h</i> */
  public static final String OVR_KEY_GENDER = "Gender";
  /** <i>native declaration : OVR_CAPI.h</i> */
  public static final String OVR_KEY_IPD = "IPD";
  /** <i>native declaration : OVR_CAPI.h</i> */
  public static final float OVR_DEFAULT_NECK_TO_EYE_VERTICAL = 0.12f;
  /** <i>native declaration : OVR_CAPI.h</i> */
  public static final float OVR_DEFAULT_NECK_TO_EYE_HORIZONTAL = 0.12f;
  /** <i>native declaration : OVR_CAPI.h</i> */
  public static final String OVR_KEY_EYE_HEIGHT = "EyeHeight";
  /** <i>native declaration : OVR_CAPI.h</i> */
  public static final String OVR_KEY_NAME = "Name";
  /**
   * No other functions calls are allowed before ovr_Initialize succeeds or after ovr_Shutdown.<br>
   * Original signature : <code>ovrBool ovr_Initialize()</code><br>
   * <i>native declaration : OVR_CAPI.h:372</i>
   */
  byte ovr_Initialize();
  /**
   * Original signature : <code>void ovr_Shutdown()</code><br>
   * <i>native declaration : OVR_CAPI.h:373</i>
   */
  void ovr_Shutdown();
  /**
   * Users can get information about each HMD by calling ovrHmd_Create with an index.<br>
   * Original signature : <code>int ovrHmd_Detect()</code><br>
   * <i>native declaration : OVR_CAPI.h:378</i>
   */
  int ovrHmd_Detect();
  /**
   * If not null, returned handle must be freed with ovrHmd_Destroy.<br>
   * Original signature : <code>ovrHmd ovrHmd_Create(int)</code><br>
   * <i>native declaration : OVR_CAPI.h:384</i>
   */
  OvrLibrary.ovrHmd ovrHmd_Create(int index);
  /**
   * Original signature : <code>void ovrHmd_Destroy(ovrHmd)</code><br>
   * <i>native declaration : OVR_CAPI.h:385</i><br>
   * @deprecated use the safer methods {@link #ovrHmd_Destroy(com.oculusvr.api.OvrLibrary.ovrHmd)} and {@link #ovrHmd_Destroy(com.sun.jna.Pointer)} instead
   */
  @Deprecated 
  void ovrHmd_Destroy(Pointer hmd);
  /**
   * Original signature : <code>void ovrHmd_Destroy(ovrHmd)</code><br>
   * <i>native declaration : OVR_CAPI.h:385</i>
   */
  void ovrHmd_Destroy(OvrLibrary.ovrHmd hmd);
  /**
   * but may be used to debug some of the related rendering.<br>
   * Original signature : <code>ovrHmd ovrHmd_CreateDebug(ovrHmdType)</code><br>
   * <i>native declaration : OVR_CAPI.h:389</i>
   */
  OvrLibrary.ovrHmd ovrHmd_CreateDebug(int type);
  /**
   * Pass null hmd to get global error (for create, etc).<br>
   * Original signature : <code>char* ovrHmd_GetLastError(ovrHmd)</code><br>
   * <i>native declaration : OVR_CAPI.h:395</i><br>
   * @deprecated use the safer methods {@link #ovrHmd_GetLastError(com.oculusvr.api.OvrLibrary.ovrHmd)} and {@link #ovrHmd_GetLastError(com.sun.jna.Pointer)} instead
   */
  @Deprecated 
  String ovrHmd_GetLastError(Pointer hmd);
  /**
   * Pass null hmd to get global error (for create, etc).<br>
   * Original signature : <code>char* ovrHmd_GetLastError(ovrHmd)</code><br>
   * <i>native declaration : OVR_CAPI.h:395</i>
   */
  String ovrHmd_GetLastError(OvrLibrary.ovrHmd hmd);
  /**
   * are not available, the function will fail. Pass 0 if only specifying SupportedCaps.<br>
   * Original signature : <code>ovrBool ovrHmd_StartSensor(ovrHmd, unsigned int, unsigned int)</code><br>
   * <i>native declaration : OVR_CAPI.h:411</i><br>
   * @deprecated use the safer methods {@link #ovrHmd_StartSensor(com.oculusvr.api.OvrLibrary.ovrHmd, int, int)} and {@link #ovrHmd_StartSensor(com.sun.jna.Pointer, int, int)} instead
   */
  @Deprecated 
  byte ovrHmd_StartSensor(Pointer hmd, int supportedCaps, int requiredCaps);
  /**
   * are not available, the function will fail. Pass 0 if only specifying SupportedCaps.<br>
   * Original signature : <code>ovrBool ovrHmd_StartSensor(ovrHmd, unsigned int, unsigned int)</code><br>
   * <i>native declaration : OVR_CAPI.h:411</i>
   */
  byte ovrHmd_StartSensor(OvrLibrary.ovrHmd hmd, int supportedCaps, int requiredCaps);
  /**
   * Stops sensor sampling, shutting down internal resources.<br>
   * Original signature : <code>void ovrHmd_StopSensor(ovrHmd)</code><br>
   * <i>native declaration : OVR_CAPI.h:414</i><br>
   * @deprecated use the safer methods {@link #ovrHmd_StopSensor(com.oculusvr.api.OvrLibrary.ovrHmd)} and {@link #ovrHmd_StopSensor(com.sun.jna.Pointer)} instead
   */
  @Deprecated 
  void ovrHmd_StopSensor(Pointer hmd);
  /**
   * Stops sensor sampling, shutting down internal resources.<br>
   * Original signature : <code>void ovrHmd_StopSensor(ovrHmd)</code><br>
   * <i>native declaration : OVR_CAPI.h:414</i>
   */
  void ovrHmd_StopSensor(OvrLibrary.ovrHmd hmd);
